既に登録されているメールアドレスであればメッセージを表示するよう変更。

--- a/force-app/main/default/classes/registFormController.cls
+++ b/force-app/main/default/classes/registFormController.cls
@@ -4,4 +4,11 @@ public with sharing class registFormController {
         List<Profile> lst =  [SELECT Id FROM Profile WHERE NAME = 'Chatterユーザ'];
         return lst[0].Id;
     }
+
+    @AuraEnabled(cacheable=true)
+    public static Integer IsAreadyExist(String email){
+        AggregateResult[] groupedResults = [SELECT COUNT(Id) cnt FROM User WHERE email = :email];
+        Object o = groupedResults[0].get('cnt');
+        return Integer.valueOf(o);
+    }
 }
