カバレッジ 100% に対応

--- a/force-app/main/default/classes/TestregistFormController.cls
+++ b/force-app/main/default/classes/TestregistFormController.cls
@@ -1,13 +1,15 @@
 @isTest
 public with sharing class TestregistFormController {
-    public TestregistFormController() {
-
-    }
-
     @isTest
     public static void testchatterProfileId(){
         Test.startTest();
         registFormController.chatterProfileId();
+        Test.stopTest();
+    }
+
+    @isTest public static void testIsAreadyExist() {
+        Test.startTest();
+        registFormController.IsAreadyExist('aaa@jp.com');
         Test.stopTest();
     }
 }
