パッケージ対応

--- a/force-app/main/default/classes/registFormController.cls
+++ b/force-app/main/default/classes/registFormController.cls
@@ -1,8 +1,23 @@
+/**
+ * @description       : 
+ * @author            : Hiroyuki Ogura
+ * @group             : 
+ * @last modified on  : 2020-11-18
+ * @last modified by  : Hiroyuki Ogura
+ * Modifications Log 
+ * Ver   Date         Author           Modification
+ * 1.0   2020-11-18   Hiroyuki Ogura   Initial Version
+**/
 public with sharing class registFormController {
     @AuraEnabled(cacheable=true)
     public static String chatterProfileId(){
         List<Profile> lst =  [SELECT Id FROM Profile WHERE NAME = 'Chatterユーザ'];
-        return lst[0].Id;
+        if (lst.size() > 0) {
+            return lst[0].Id;
+        } else {
+            return null;
+        }
+        
     }
 
     @AuraEnabled(cacheable=true)
